--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 <img src="assets/img/card-services-1.jpg" alt="service">
                 </a>
                 <div class="cs_card_info cs_white_bg cs_radius_8 position-absolute">
-                  <h3 class="cs_card_title cs_fs_20 cs_mb_12"><a href="service-details.html" aria-label="Service details page link">Corporativo e Industrial</a></h3>
+                  <h3 class="cs_card_title cs_fs_20 cs_mb_12"><a href="" aria-label="Service details page link">Corporativo e Industrial</a></h3>
                   <p class="mb-0">Limpieza especializada para diferentes tipos de industria.</p>
                 </div>
               </div>
@@ -262,7 +262,7 @@
                 <img src="assets/img/card-services-2.jpg" alt="service">
                 </a>
                 <div class="cs_card_info cs_white_bg cs_radius_8 position-absolute">
-                  <h3 class="cs_card_title cs_fs_20 cs_mb_12"><a href="service-details.html" aria-label="Service details page link">Limpieza deTransporte</a></h3>
+                  <h3 class="cs_card_title cs_fs_20 cs_mb_12"><a href="" aria-label="Service details page link">Limpieza deTransporte</a></h3>
                   <p class="mb-0">Lavado interios, exterior y sanitización de unidades.</p>
                 </div>
               </div>
@@ -273,7 +273,7 @@
                 <img src="assets/img/card-services-3.jpg" alt="service">
                 </a>
                 <div class="cs_card_info cs_white_bg cs_radius_8 position-absolute">
-                  <h3 class="cs_card_title cs_fs_20 cs_mb_12"><a href="service-details.html" aria-label="Service details page link">Solución Integral</a></h3>
+                  <h3 class="cs_card_title cs_fs_20 cs_mb_12"><a href="" aria-label="Service details page link">Solución Integral</a></h3>
                   <p class="mb-0">En un solo proveedor, ofrecemos una solución 360°.</p>
                 </div>
               </div>
